# llvm-bazel-helloworld

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
